--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -25,8 +25,13 @@ std = [
     'system/std',
     'timestamp/std',
     'transaction-payment/std',
-    'template/std',
+    'iroha-bridge/std',
+    "treasury/std",
 ]
+
+[dependencies]
+treasury = { path = '../pallets/treasury', default-features = false }
+
 [dependencies.aura]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
@@ -164,10 +169,10 @@ package = 'frame-system'
 tag = 'v2.0.0-rc4'
 version = '2.0.0-rc4'
 
-[dependencies.template]
+[dependencies.iroha-bridge]
 default-features = false
-package = 'pallet-template'
-path = '../pallets/template'
+package = 'pallet-iroha-bridge'
+path = '../pallets/iroha-bridge'
 version = '2.0.0-rc4'
 
 [dependencies.timestamp]
@@ -189,7 +194,7 @@ authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
 edition = '2018'
 homepage = 'https://substrate.dev'
 license = 'Unlicense'
-name = 'node-template-runtime'
+name = 'substrate-iroha-bridge-runtime'
 repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
 version = '2.0.0-rc4'
 [package.metadata.docs.rs]
