--- a/pallets/treasury/Cargo.toml
+++ b/pallets/treasury/Cargo.toml
@@ -80,6 +80,10 @@ git = 'https://github.com/paritytech/substrate.git'
 version = '2.0.0-rc.4'
 tag = 'v2.0.0-rc4'
 
+[dependencies.iroha_client_no_std]
+default-features = false
+path = "../../../../../iroha/iroha_client_no_std"
+
 #[dependencies.x-core]
 #default-features = false
 #path = '../core'
