--- a/pallets/iroha-bridge/Cargo.toml
+++ b/pallets/iroha-bridge/Cargo.toml
@@ -94,13 +94,36 @@ std = [
     'serde'
 ]
 
+[dev-dependencies.sp-api]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc4'
+version = '2.0.0-rc4'
+
+[dev-dependencies.sp-offchain]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc4'
+version = '2.0.0-rc4'
+
+[dev-dependencies.frame-executive]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc4'
+version = '2.0.0-rc4'
+
 [dev-dependencies]
 iroha_client = { path = "../../../../iroha_client" }
 iroha = { path = "../../../../iroha" }
+iroha_logger = { path = "../../../../iroha_logger" }
 async-std = { version = "1.5", features = ["attributes", "unstable"] }
 parity-scale-codec = { version = "1.3", features = ["derive"] }
 log = "0.4.8"
 tempfile = "3.1.0"
+parity-util-mem = "0.6.1"
+reqwest = { version = "0.10.7", features = ["blocking"] }
+tokio = "0.2.22"
+
 #offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate.git", tag = 'v2.0.0-rc4', version = '2.0.0-rc4' }
 #offchain = { package = "substrate-offchain", git = "https://github.com/paritytech/substrate.git", tag = 'v2.0.0-rc4' }
 #offchain = { package = "offchain-primitives", git = "https://github.com/paritytech/substrate.git", tag = 'v2.0.0-rc4', version = '2.0.0-rc4' }
