--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -115,3 +115,7 @@ version = '2.0.0-rc4'
 git = 'https://github.com/paritytech/substrate.git'
 tag = 'v2.0.0-rc4'
 version = '2.0.0-rc4'
+
+[dependencies.iroha_client_no_std]
+default-features = false
+path = "../../../../iroha/iroha_client_no_std"
