--- a/pallets/iroha-bridge/Cargo.toml
+++ b/pallets/iroha-bridge/Cargo.toml
@@ -4,9 +4,9 @@ description = 'FRAME pallet template'
 edition = '2018'
 homepage = 'https://substrate.dev'
 license = 'Unlicense'
-name = 'pallet-iroha-bridge'
+name = 'iroha-bridge'
 repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
-version = '2.0.0-rc4'
+version = '2.0.0-rc5'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -24,7 +24,7 @@ parking_lot = "0.10.0"
 #ed25519-dalek = { version = "1.0.0-pre.3", default-features = false }
 #collateral = { path = '../collateral', default-features = false }
 treasury = { path = '../treasury', default-features = false }
-serde = { version = "1.0", optional = true, features = ["derive"] }
+serde = { version = "1.0.111", optional = true, features = ["derive"] }
 
 #serde = { version = "1", default-features = false, features = ["derive"] }
 # updated to `alt_serde_json` when latest version supporting feature `alloc` is released
@@ -34,51 +34,45 @@ serde_json = { version = "1", default-features = false, git = "https://github.co
 
 [dependencies.pallet-balances]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-balances'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.frame-support]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.frame-system]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.sp-std]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.iroha_client_no_std]
 default-features = false
-path = "../../../../../iroha/iroha_client_no_std"
+git = "https://github.com/EmelianPiker/iroha"
+branch = "pikergan/2020-08-28/parachain-compat-fix02"
 
 [dependencies.sp-core]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 #features = ["full_crypto"]
 
 [dependencies.sp-io]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.sp-runtime]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [features]
 default = ['std']
@@ -95,41 +89,10 @@ std = [
     'serde'
 ]
 
-[dev-dependencies.sp-api]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
-
-[dev-dependencies.sp-offchain]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
-
-[dev-dependencies.frame-executive]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-tag = 'v2.0.0-rc4'
-version = '2.0.0-rc4'
-
 [dev-dependencies]
-iroha_client = { path = "../../../../iroha_client" }
-iroha = { path = "../../../../iroha" }
-iroha_logger = { path = "../../../../iroha_logger" }
+#iroha_client = { git = "https://github.com/EmelianPiker/iroha", branch = "pikergan/2020-08-18/parachain-compat" }
+#iroha = { git = "https://github.com/EmelianPiker/iroha", branch = "pikergan/2020-08-18/parachain-compat" }
 async-std = { version = "1.5", features = ["attributes", "unstable"] }
 parity-scale-codec = { version = "1.3", features = ["derive"] }
 log = "0.4.8"
 tempfile = "3.1.0"
-parity-util-mem = "0.6.1"
-reqwest = { version = "0.10.7", features = ["blocking"] }
-tokio = "0.2.22"
-
-#offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate.git", tag = 'v2.0.0-rc4', version = '2.0.0-rc4' }
-#offchain = { package = "substrate-offchain", git = "https://github.com/paritytech/substrate.git", tag = 'v2.0.0-rc4' }
-#offchain = { package = "offchain-primitives", git = "https://github.com/paritytech/substrate.git", tag = 'v2.0.0-rc4', version = '2.0.0-rc4' }
-
-#[dev-dependencies.sp-primitives]
-#git = 'https://github.com/paritytech/substrate.git'
-#tag = 'v2.0.0-rc4'
-#version = '2.0.0-rc4'
