--- a/pallets/treasury/Cargo.toml
+++ b/pallets/treasury/Cargo.toml
@@ -3,7 +3,7 @@ authors = ['Interlay']
 description = 'Treasury module'
 edition = '2018'
 name = 'treasury'
-version = '2.0.0-rc.4'
+version = '2.0.0-rc5'
 
 [features]
 default = ['std']
@@ -17,7 +17,6 @@ std = [
 	'sp-std/std',
     'system/std',
 	'pallet-balances/std',
-	'iroha_client_no_std/std',
 #	'x-core/std',
 ]
 
@@ -25,70 +24,62 @@ std = [
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.0'
+version = '1.3.4'
 
 [dependencies.frame-support]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.safe-mix]
 default-features = false
-version = '1.0.0'
+version = '1.0.1'
 
 [dependencies.sp-core]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.sp-io]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.sp-runtime]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.sp-std]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.sp-arithmetic]
 default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.system]
 default-features = false
 package = 'frame-system'
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 [dependencies.pallet-balances]
 default-features = false
 package = 'pallet-balances'
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0-rc.4'
-tag = 'v2.0.0-rc4'
-
-[dependencies.iroha_client_no_std]
-default-features = false
-path = "../../../../../iroha/iroha_client_no_std"
+git = "https://github.com/paritytech/substrate"
+branch = "rococo-branch"
 
 #[dependencies.x-core]
 #default-features = false
 #path = '../core'
 
-#[dev-dependencies]
-#mocktopus = "0.7.0"
+[dev-dependencies]
+mocktopus = "0.7.0"
 
+[dependencies.iroha_client_no_std]
+default-features = false
+git = "https://github.com/EmelianPiker/iroha"
+branch = "pikergan/2020-08-28/parachain-compat-fix02"
