--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -41,6 +41,10 @@ cumulus-message-broker = { git = "https://github.com/paritytech/cumulus",  defau
 cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
 cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
 
+# Additional dependencies
+treasury = { path = "../pallets/treasury", default-features = false }
+iroha-bridge = { path = "../pallets/iroha-bridge", default-features = false }
+
 [build-dependencies]
 wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }
 
