--- a/pallets/iroha-bridge/Cargo.toml
+++ b/pallets/iroha-bridge/Cargo.toml
@@ -56,7 +56,7 @@ branch = "rococo-branch"
 [dependencies.iroha_client_no_std]
 default-features = false
 git = "https://github.com/EmelianPiker/iroha"
-branch = "pikergan/2020-08-28/parachain-compat-fix02"
+branch = "substrate-bridge-rococo"
 
 [dependencies.sp-core]
 default-features = false
@@ -90,8 +90,8 @@ std = [
 ]
 
 [dev-dependencies]
-#iroha_client = { git = "https://github.com/EmelianPiker/iroha", branch = "pikergan/2020-08-18/parachain-compat" }
-#iroha = { git = "https://github.com/EmelianPiker/iroha", branch = "pikergan/2020-08-18/parachain-compat" }
+#iroha_client = { git = "https://github.com/EmelianPiker/iroha", branch = "substrate-bridge-rococo" }
+#iroha = { git = "https://github.com/EmelianPiker/iroha", branch = "substrate-bridge-rococo" }
 async-std = { version = "1.5", features = ["attributes", "unstable"] }
 parity-scale-codec = { version = "1.3", features = ["derive"] }
 log = "0.4.8"
