--- a/pallets/treasury/Cargo.toml
+++ b/pallets/treasury/Cargo.toml
@@ -82,4 +82,4 @@ mocktopus = "0.7.0"
 [dependencies.iroha_client_no_std]
 default-features = false
 git = "https://github.com/EmelianPiker/iroha"
-branch = "pikergan/2020-08-28/parachain-compat-fix02"
+branch = "substrate-bridge-rococo"
