--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,11 +1,14 @@
-.PHONY: cargo yarn
+.PHONY: cargo-build-release yarn-build localtestnet
 
 RUN := $(shell which nix-shell > /dev/null && echo 'eval `cat ./nix-env.sh`; nix-shell --run ' || echo 'sh -c ')
 
-cargo:
+cargo-build-release:
 	${RUN} "cargo build --release"
 
-yarn:
+yarn-build:
 	${RUN} "yarn"
 	${RUN} "yarn build"
+
+localtestnet:
+	./scripts/localtestnet.sh
 
