[PPS-1] [PPS-2] Docker integration
Reason: Ability to run localtestnet inside docker is needed
Solution: Update some docker files, do needed points to make docker-compose work

1. Create .inside_docker_jobs folder as middle directory of socket and jobs communication
2. Use nix image in docker-compose.yml, use current repository as read only volume
3. Design to keed repository in tmpfs directory
4. Using /cache directory to keep cargo target results cached
5. Using of flock in Makefile for atomic unix socket comunication
6. Create scripts/docker_compose_up.sh, passing shell script of git checkout and localtestnet running
7. Create scripts/inside_docker.sh to install required packages if it is needed (first time run)
8. Update localtestnet.sh for better compatibility with docker compose

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -21,3 +21,7 @@ yarn-build:
 	${RUN} "yarn"
 	${RUN} "yarn build"
 
+.with_docker_jobs/localtestnet_testlog_from_commit_%.log:
+	@mkdir -p .inside_docker_jobs/locked
+	flock .inside_docker_jobs/locked -c "./scripts/docker_compose_up.sh $*"
+
