Add common module & trading-pair pallet
Reason: `common` module is required for indirection between DEX dependencies. The `trading-pair` pallet is for trading pair management on DEX
Solution: create corresponding crates with basic structures and functions

1. Added crates `common` and `trading-pair`
2. Defined trait `common::Trait` (dex common trait)
3. Defined trait `EnsureDexOwner` and its implemetation for `()`
4. Defined `TradingPair` and `AssetId` structs
5. Added extrinsic `TradingPair::register(dex_id: DexId, base_asset_id: AssetId, target_asset_id: AssetId)` for registering new trading pairs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
 members = [
 	"runtime/",
+	"common",
 	"pallets/parachain-info",
 	"pallets/token-dealer",
+	"pallets/trading-pair",
 	"pallets/template",
 	"node/",
 ]
