[PPS-1] Better flock and script passing over unix socket
Reason: Early free of lockdir is needed for parallel tests
Solution: Optimize and inprove flock and unix socket script passing

1. Simplify Makefile for this task, and move logic into script
2. Use docker detaching and pid file to finish flock early
3. Inside docker finish socat early
4. Add pwd_is_repos_topdir to helpers.sh

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,12 +1,11 @@
-.PHONY: default testlog localtestnet-run cargo-build-release cargo-build cargo-test-release cargo-test yarn-build
+.PHONY: default docker-test localtestnet-run cargo-build-release cargo-build cargo-test-release cargo-test yarn-build
 
 RUN := $(shell which nix-shell > /dev/null && echo 'eval `cat ./nix-env.sh`; nix-shell --run ' || echo 'sh -c ')
 LAST_COMMIT := $(shell sh -c "git log | head -n 1 | awk '{ print \$$2 }'" 2> /dev/null)
 
 default: cargo-build-release
 
-testlog: .with_docker_jobs/localtestnet_testlog_from_commit_$(LAST_COMMIT).log
-	less -R .with_docker_jobs/localtestnet_testlog_from_commit_$(LAST_COMMIT).log
+docker-test: $(LAST_COMMIT)
 
 localtestnet-run:
 	./scripts/localtestnet.sh
@@ -28,9 +27,7 @@ yarn-build:
 	${RUN} "yarn build"
 
 .with_docker_jobs/localtestnet_testlog_from_commit_%.log:
-	@mkdir -p .inside_docker_jobs/locked
-	@rm -f .inside_docker_jobs/locked/socket
-	@flock .inside_docker_jobs/locked -c "./scripts/docker_compose_up.sh $*" | tee $@.tmp
-	@mv $@.tmp $@
-	@exit
+	@./scripts/docker_compose_up.sh $* $@
 
+%:
+	@./scripts/docker_compose_up.sh $@ .with_docker_jobs/localtestnet_testlog_from_commit_$@.log:
