--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,18 @@
 [workspace]
 members = [
-        "runtime/",
-        "common",
-        "pallets/assets",
-        "pallets/parachain-info",
-        "pallets/permissions",
-        "pallets/token-dealer",
-        "pallets/trading-pair",
-        "pallets/dex-manager",
-        "pallets/template",
-        "pallets/xor-fee",
-        "pallets/referral-system",
-        "node/",
+    "runtime/",
+    "common",
+    "pallets/assets",
+    "pallets/parachain-info",
+    "pallets/permissions",
+    "pallets/token-dealer",
+    "pallets/trading-pair",
+    "pallets/dex-manager",
+    "pallets/template",
+    "pallets/xor-fee",
+    "pallets/referral-system",
+    "pallets/bonding-curve-pool",
+    "node/",
 ]
 
 [profile.release]
