--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 serde = { version = "1.0", optional = true }
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+orml-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
@@ -25,6 +26,7 @@ std = [
     'sp-arithmetic/std',
     'sp-core/std',
     'currencies/std',
+    'orml-traits/std',
     'blake2-rfc/std',
     #'twox-hash/std',
 ]
