--- a/pallets/bonding-curve-pool/Cargo.toml
+++ b/pallets/bonding-curve-pool/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = '2018'
-name = 'trading-pair'
+name = 'bonding-curve-pool'
 version = '2.0.0-rc5'
 
 [package.metadata.docs.rs]
@@ -13,34 +13,36 @@ package = 'parity-scale-codec'
 version = '1.3.1'
 
 [dependencies]
+serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 common = { path = "../../common", default-features = false }
-assets = { path = "../assets", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-dex-manager = { path = "../dex-manager", default-features = false }
+orml-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+assets = { path = "../assets", default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 permissions = { path = "../permissions", default-features = false }
 
 [features]
 default = ['std']
 std = [
+    'serde',
     'codec/std',
     'frame-support/std',
     'frame-system/std',
     'sp-std/std',
+    'sp-runtime/std',
     'common/std',
-    'assets/std',
     'currencies/std',
     'tokens/std',
-    'traits/std',
-    'dex-manager/std',
+    'orml-traits/std',
+    'assets/std',
+    'permissions/std',
 ]
