--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,6 +9,7 @@ serde = { version = "1.0.101", default-features = false, optional = true, featur
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 
 trading-pair = { path = "../pallets/trading-pair", default-features = false}
+bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false}
 parachain-info = { path = "../pallets/parachain-info", default-features = false}
 permissions = { path = "../pallets/permissions", default-features = false}
 cumulus-token-dealer = { path = "../pallets/token-dealer", default-features = false}
@@ -16,6 +17,7 @@ dex-manager = { path = "../pallets/dex-manager", default-features = false }
 referral-system = { path = "../pallets/referral-system", default-features = false }
 xor-fee = { path = "../pallets/xor-fee", default-features = false }
 template = { package = "pallet-template", path = "../pallets/template", version = "2.0.0-rc5", default-features = false}
+
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 
@@ -88,6 +90,7 @@ std = [
 	"cumulus-primitives/std",
 	"cumulus-token-dealer/std",
 	"trading-pair/std",
+	"bonding-curve-pool/std",
 	"common/std",
 	"template/std",
 	"dex-manager/std",
