Introduce assets pallet
Reason: inability to check asset owners to control an asset supply depending on who is the owner
Solution: create `assets` pallet as an extension of `currencies` pallet
Additional benefits: fine control over assets

- Added `assets` pallet with `register` extrinsic
- Implemented slightly modified functions from `MultiCurrency` and `MultiCurrencyExtended` traits, where each `CurrencyId` was replaced with our `AssetId` and in some, a check for the asset owner was added.

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

HOTFIX for assets pallet

Reason: Several compilation problems exist
Solution: Fixing and compiling loop, do points to solve problem

1. Add Default trait requrements because it is needed by dex
2. Fix version of scale codec
3. Remove assets deps from common, because common is shared structure
3.a using assets from dex pallet directly is same thing as assets from common, and common as shared dependancy, but it solves some problems
4. Adding missing default-features = false to assets/Cargo.toml, this thing really fixes problem with npos vec! macros problem
5. Fix problem with sp_core::hashing
5.a Move hash function to common/src/lib.rs, bacause this function is shared like
5.b Use blake2_ref to fix problem of hashing not found
6. Run cargo fmt
7. Compilation success, and tested it in rococo local test net

Signed-off-by: Evgeni Zhukov <zhukov@soramitsu.co.jp>

Resolving conversations

Reason: Some changes is requested
Solution: Do the points to solve requests

1. AssetIdAlreadyExist is used
2. Remove duplicate DEXId in trading-pair/src/mock.rs
3. Use MINT BURN TRANSFER
3.a Grant TRANSFER MINT BURN

Additionaly

1. Fixes after rebase
2. Add create_permission into register
3. Create and add SLASH permission
4. Remove unneeded grant_permissions_with_parameters
5. Fix tests, rename PermissionNotOwned into PermissionNotFound
6. Very small README.md modification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
         "runtime/",
         "common",
+        "pallets/assets",
         "pallets/parachain-info",
         "pallets/permissions",
         "pallets/token-dealer",
