--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 edition = '2018'
-name = 'trading-pair'
+name = 'assets'
 version = '2.0.0-rc5'
 
 [package.metadata.docs.rs]
@@ -10,25 +10,24 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.1'
+version = '1.3.5'
 
 [dependencies]
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-common = { path = "../../common", default-features = false }
-assets = { path = "../assets", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-dex-manager = { path = "../dex-manager", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+permissions = { path = "../permissions", default-features = false }
+common = { path = "../../common", default-features = false }
+
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-permissions = { path = "../permissions", default-features = false }
 
 [features]
 default = ['std']
@@ -37,10 +36,10 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'sp-std/std',
-    'common/std',
-    'assets/std',
     'currencies/std',
-    'dex-manager/std',
     'tokens/std',
     'traits/std',
+    'sp-core/std',
+    'permissions/std',
+    'common/std',
 ]
