--- a/pallets/dex-manager/Cargo.toml
+++ b/pallets/dex-manager/Cargo.toml
@@ -18,6 +18,7 @@ version = '1.3.1'
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 common = { path = "../../common", default-features = false }
+assets = { path = "../assets", default-features = false }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
@@ -29,6 +30,7 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+permissions = { path = "../permissions", default-features = false }
 
 [features]
 default = ['std']
@@ -37,6 +39,7 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'common/std',
+    'assets/std',
     'currencies/std',
     'tokens/std',
     'traits/std',
