--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -48,10 +48,11 @@ cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-f
 
 # Additional dependencies
 common = { path = "../common", default-features = false }
+assets = { path = "../pallets/assets", default-features = false }
 #iroha-bridge = { path = "../pallets/iroha-bridge", default-features = false }
 
 [build-dependencies]
-wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }
+substrate-wasm-builder-runner = { version = "1.0.6" }
 
 [features]
 default = [ "std" ]
@@ -90,6 +91,7 @@ std = [
 	"dex-manager/std",
 	"currencies/std",
 	"tokens/std",
+	"assets/std",
 ]
 
 # Will be enabled by the `wasm-builder` when building the runtime for WASM.
