Introduce dex-manager pallet, update GenesisConfig in runtime and trading-pair tests
Signed-off-by: Maksim Surkov <modbrin@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
         "pallets/permissions",
         "pallets/token-dealer",
         "pallets/trading-pair",
+        "pallets/dex-manager",
         "pallets/template",
         "node/",
 ]
