--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -20,6 +20,7 @@ codec = { package = 'parity-scale-codec', version = '1.0.0' }
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
+common = { path = "../common", default-features = false }
 
 # Parachain dependencies
 parachain-runtime = { path = "../runtime" }
@@ -82,6 +83,5 @@ substrate-test-client = { git = "https://github.com/paritytech/substrate", branc
 substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
 
 [dependencies.iroha_client_no_std]
-default-features = false
 git = "https://github.com/EmelianPiker/iroha"
 branch = "substrate-bridge-rococo"
