--- a/pallets/dex-manager/Cargo.toml
+++ b/pallets/dex-manager/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
+description = 'Pallet for creation of DEXes, managing their specific parameters and ownership.'
+authors = ["Maxim Surkov <modbrin@gmail.com>"]
+version = '0.1.0'
+name = 'dex-manager'
 edition = '2018'
-name = 'trading-pair'
-version = '2.0.0-rc5'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -16,17 +18,17 @@ version = '1.3.1'
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 common = { path = "../../common", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-dex-manager = { path = "../dex-manager", default-features = false }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 
 [features]
 default = ['std']
@@ -34,10 +36,9 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
-    'sp-std/std',
     'common/std',
     'currencies/std',
-    'dex-manager/std',
     'tokens/std',
     'traits/std',
+    'serde/std'
 ]
