--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.2"
 services:
   dev:
     container_name: substrate-polkaswap-parachain
-    image: lnl7/nix:2020-06-07
+    # Please run ```docker build -t soraneo-develop-nix .```
+    image: soraneo-develop-nix:latest
     working_dir: /parachain
     ports:
       - "9944:9944"   # relay 0
@@ -17,6 +18,9 @@ services:
 
     environment:
       - INSIDE_DOCKER=1
+      - INSIDE_DOCKER_USE_COMMIT=${INSIDE_DOCKER_USE_COMMIT}
+      - INSIDE_DOCKER_RUN_COMMANDS=${INSIDE_DOCKER_RUN_COMMANDS}
+      - INSIDE_DOCKER_USE_LAST_COMMIT_BY_DEFAULT=1
 
     volumes:
 
@@ -28,12 +32,14 @@ services:
       - type: tmpfs
         target: /parachain
 
-      - type: bind
-        source: ./.inside_docker_jobs
-        target: /parachain/.inside_docker_jobs
+        # Uncommend this lines if unix socket to be used to pass commands
+        # - type: bind
+        #   source: ./.inside_docker_jobs
+        #   target: /parachain/.inside_docker_jobs
 
-      - type: bind
-        source: /tmp/cargo_target_cache
-        target: /cache
+        # Uncommend this lines if external cache to be used
+        # - type: bind
+        #   source: /tmp/cargo_target_cache
+        #   target: /cache
 
     command: bash /repos/parachain/scripts/inside_docker.sh
