--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,14 +1,20 @@
-.PHONY: default docker-env-test docker-localtestnet docker-localtestnet docker-build-release docker-test-release docker-build-debug docker-test-debug cargo-build-release cargo-build-debug cargo-test-release cargo-test-debug yarn-build
+.PHONY: default docker-build-image docker-env-test docker-localtestnet docker-localtestnet-debug docker-localtestnet docker-build-release docker-test-release docker-build-debug docker-test-debug cargo-build-release cargo-build-debug cargo-test-release cargo-test-debug yarn-build
 
-RUN := $(shell which nix-shell > /dev/null && echo 'eval "`cat ./nix-env.sh`"; nix-shell --run ' || echo 'sh -c ')
+RUN := $(shell which nix-shell > /dev/null 2>&1 && echo 'eval "`cat ./nix-env.sh`"; nix-shell --run ' || echo 'sh -c ')
 LAST_COMMIT := $(shell sh -c "git log | head -n 1 | awk '{ print \$$2 }'" 2> /dev/null)
 
 default: cargo-build-release
+
+docker-build-image:
+	docker build -t soraneo-develop-nix .
 
 docker-env-test:
 	@./scripts/docker_compose_up.sh --with-last-commit --run "echo \$$PROTOC"
 
 docker-localtestnet: $(LAST_COMMIT)
+
+docker-localtestnet-debug:
+	echo "Unimplemented"
 
 docker-build-release:
 	@./scripts/docker_compose_up.sh --with-last-commit --run "cargo build --release"
@@ -39,9 +45,9 @@ yarn-build:
 	${RUN} "yarn build"
 
 .with_docker_jobs/localtestnet_testlog_from_commit_%.log:
-	@./scripts/docker_compose_up.sh $* $@ -ef
+	@./scripts/docker_compose_up.sh $* $@ -e
 
 %:
-	@./scripts/docker_compose_up.sh --commit $@ --logfile .with_docker_jobs/localtestnet_testlog_from_commit_$@.log -- -ef
+	@./scripts/docker_compose_up.sh --commit $@ --logfile .with_docker_jobs/localtestnet_testlog_from_commit_$@.log -- -e
 
 
