Fixed-point Balance type
Reason: inability to work with balances as a fractional type
Solution: define a custom `Balance` type which is a wrapper for `FixedU128`

- Added `Balance` type and many implementations for it
- Substituted concrete `Balance` type instead of `BalanceOf<T>`
- Implement `PartialEq`, `PartialOrd` for `FixedWrapper`
- Slightly modified `assets` pallet

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -13,6 +13,7 @@ package = 'parity-scale-codec'
 version = '1.3.5'
 
 [dependencies]
+serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -23,7 +24,6 @@ sp-core = { git = "https://github.com/paritytech/substrate", default-features = 
 permissions = { path = "../permissions", default-features = false }
 common = { path = "../../common", default-features = false }
 
-
 [dev-dependencies]
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -32,6 +32,7 @@ pallet-balances = { git = "https://github.com/paritytech/substrate", default-fea
 [features]
 default = ['std']
 std = [
+    'serde',
     'codec/std',
     'frame-support/std',
     'frame-system/std',
