--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -16,7 +16,14 @@ frame-support = { git = "https://github.com/paritytech/substrate", default-featu
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 blake2-rfc = { version = "0.2.18", default-features = false }
+static_assertions = "1.1.0"
+num-traits = { version = "0.2.12", default-features = false }
 #twox-hash = { version = "1.5.0", default-features = false }
+
+cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
+rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
+polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
+polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
 
 [features]
 default = ['std']
@@ -30,5 +37,10 @@ std = [
     'currencies/std',
     'orml-traits/std',
     'blake2-rfc/std',
+    'num-traits/std',
+    'cumulus-upward-message/std',
+    'rococo-runtime/std',
+    'polkadot-core-primitives/std',
+    'polkadot-parachain/std',
     #'twox-hash/std',
 ]
