--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -31,6 +31,7 @@ sp-core = { git = "https://github.com/paritytech/substrate", default-features = 
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+common = { path = "../../common", default-features = false }
 
 [features]
 default = ['std']
@@ -44,4 +45,5 @@ std = [
     'referral-system/std',
     'frame-support/std',
     'frame-system/std',
+    'common/std',
 ]
