--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0.101", default-features = false, optional = true, featur
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 
 trading-pair = { path = "../pallets/trading-pair", default-features = false}
-bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false}
+bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false }
 technical = { path = "../pallets/technical", default-features = false}
 parachain-info = { path = "../pallets/parachain-info", default-features = false}
 permissions = { path = "../pallets/permissions", default-features = false}
@@ -105,6 +105,7 @@ std = [
 	"tokens/std",
 	"assets/std",
 	"dex-api/std",
+	"permissions/std",
 ]
 
 # Will be enabled by the `wasm-builder` when building the runtime for WASM.
