[PSS-18] Usability and fixes
Reason: Some useful functions is needed, and fixes
Solution: Do points

1. Any commit in docker feature
2. Fix test net run after fail, ```verbose must make cargo-build-release```
3. Using export_if_not_exist in nix-env.sh
3.a Adding this function to helpers.sh
4. Update Makefile ```.with_docker_jobs/localtestnet_testlog ...```
5. Fix -d /cache

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -45,7 +45,7 @@ yarn-build:
 	${RUN} "yarn build"
 
 .with_docker_jobs/localtestnet_testlog_from_commit_%.log:
-	@./scripts/docker_compose_up.sh $* $@ -e
+	@./scripts/docker_compose_up.sh --commit $* --logfile $@ -- -e
 
 %:
 	@./scripts/docker_compose_up.sh --commit $@ --logfile .with_docker_jobs/localtestnet_testlog_from_commit_$@.log -- -e
