[PSS-7] Introduce technical pallet
Reason: Special values that can act like account with aggregated balance is needed
Solution: Create technical pallet with trait and primitives in common

1. Cargo.lock byteorder
2. add Comic assets useful for tests it there will be many tests with different asset kinds
3. add technical asset for future uses if constructed assets will be needed
4. add From impls for new primitives
5. add TechPurpose, it is puspose to use for technical account
6. add PureOrWrapper impl for primitives
7. add SwapAction and SwapRulesValidation traits in common, useful not only for technical pallet
7.a it adds ability to control atomicity of operation if impl will control atomicity of group of actions with only one block
7.b another reason is to use triggers for crawd like solutions
8. add PureOrWrapper trait, it is usefull for wrapping of original units and not problems with direct usage of types
9. add aliases into technical pallet
10. add TechAccountIdReprCompat that is useful for hash mapping of technical id into original representations
10.a use AccountId32 and 128 + 128 = 256 mapping, where first 128 bit is magic bytes, second is twox hash of struct
11. add PendingSwap structure for cases whan wairing for claim is needed, for example crows like things
12. using PhantomData in ReprCompat to pass lookup table and ability to translate from repr (AccountId32) into TechAccountId
13. implement Ord for ReprCompat because it is not exist for Runtime (used in PhantomData)
14. add TECH_ACCOUNT_MAGIC_PREFIX
15. implement From and PureOrWrappet instances for ReprCompat
15.a encode TechAccountId structure and hash it with twox, after this use 128 + 128 encoding
15.b wrap primitive of TechAccountId into ReprCompat
16. create main Trait of technical pallet
16.a using TechAccountIdPrimitive what will be wrapped into ReprCompat, it is needed because implementations is in local crate
17. create Trigger and Condition, Trigger is for example "crown is finished", cond

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "pallets/trading-pair",
     "pallets/dex-manager",
     "pallets/template",
+    "pallets/technical",
     "pallets/xor-fee",
     "pallets/referral-system",
     "pallets/bonding-curve-pool",
