--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -10,6 +10,7 @@ codec = { package = "parity-scale-codec", version = "1.3.0", default-features = 
 
 trading-pair = { path = "../pallets/trading-pair", default-features = false}
 bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false}
+technical = { path = "../pallets/technical", default-features = false}
 parachain-info = { path = "../pallets/parachain-info", default-features = false}
 permissions = { path = "../pallets/permissions", default-features = false}
 cumulus-token-dealer = { path = "../pallets/token-dealer", default-features = false}
@@ -91,6 +92,7 @@ std = [
 	"cumulus-token-dealer/std",
 	"trading-pair/std",
 	"bonding-curve-pool/std",
+	"technical/std",
 	"common/std",
 	"template/std",
 	"dex-manager/std",
