Separate LiquidityRegistry from dex-manager as dex-api pallet, introduce mock-liquidity-source, modify permissions and trading-pair
Signed-off-by: Maksim Surkov <modbrin@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ members = [
     "pallets/token-dealer",
     "pallets/trading-pair",
     "pallets/dex-manager",
+    "pallets/dex-api",
+    "pallets/liquidity-proxy",
+    "pallets/mock-liquidity-source",
     "pallets/template",
     "pallets/technical",
     "pallets/xor-fee",
