--- a/pallets/mock-liquidity-source/Cargo.toml
+++ b/pallets/mock-liquidity-source/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-description = 'Pallet for creation of DEXes, managing their specific parameters and ownership.'
-authors = ["Maxim Surkov <modbrin@gmail.com>"]
-version = '0.1.0'
-name = 'dex-manager'
 edition = '2018'
+name = 'mock-liquidity-source'
+version = '0.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -18,21 +16,23 @@ version = '1.3.1'
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 common = { path = "../../common", default-features = false }
-assets = { path = "../assets", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
+assets = { path = "../assets", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-permissions = { path = "../permissions", default-features = false }
+dex-manager = { path = "../dex-manager", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
 
 [features]
 default = ['std']
@@ -41,10 +41,12 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'common/std',
-    'assets/std',
-    'currencies/std',
     'tokens/std',
     'traits/std',
     'serde/std',
+    'assets/std',
+    'currencies/std',
+    'dex-manager/std',
+    'trading-pair/std',
     'permissions/std',
 ]
