Bonding curve pool: 'buy-in' & 'sell-out' exchange functions
Reason: inability to use the pool as a liquidity source
Solution: implement `LiquiditySource` and corresponding buy and sell functions

Changes:
- Added `sqrt` and `sqrt_accurate` functions for `FixedWrapper`
- Added `fixed!` macro for constructing complex `Fixed` values
- Defined `DEXId` in `common`
- Improve bonding-curve price calculation formula
- Added `buy_out` and `sell_in` functions and implemented `LiquiditySource` trait using them
- Added `From<[u8; 16]>` implementation for technical account IDs

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -33,6 +33,7 @@ sp-io = { git = "https://github.com/paritytech/substrate", default-features = fa
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
 dex-api = { path = "../dex-api", default-features = false }
+technical = { path = "../technical", default-features = false }
 
 [features]
 default = ['std']
