--- a/pallets/bonding-curve-pool/Cargo.toml
+++ b/pallets/bonding-curve-pool/Cargo.toml
@@ -22,14 +22,19 @@ currencies = { package = "orml-currencies", branch = "rococo-branch", git = "htt
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 orml-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 assets = { path = "../assets", default-features = false }
 technical = { path = "../technical", default-features = false }
+dex-api = { path = "../dex-api", default-features = false }
+permissions = { path = "../permissions", default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-permissions = { path = "../permissions", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
+dex-manager = { path = "../dex-manager", default-features = false }
+mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
 
 [features]
 default = ['std']
@@ -40,10 +45,13 @@ std = [
     'frame-system/std',
     'sp-std/std',
     'sp-runtime/std',
+    'sp-arithmetic/std',
     'common/std',
     'currencies/std',
     'tokens/std',
     'orml-traits/std',
     'assets/std',
     'technical/std',
+    'dex-api/std',
+    'permissions/std',
 ]
