--- a/pallets/mock-liquidity-source/Cargo.toml
+++ b/pallets/mock-liquidity-source/Cargo.toml
@@ -26,6 +26,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo
 serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
 assets = { path = "../assets", default-features = false }
 permissions = { path = "../permissions", default-features = false }
+technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -47,4 +48,5 @@ std = [
     'assets/std',
     'currencies/std',
     'permissions/std',
+    'technical/std',
 ]
