Implement liquidity proxy pallet, specifically: - liquidity sources aggregation algorithm; - external interfaces; - exhaustive tests.
Signed-off-by: Eugene Kovalev <eugene.a.kovalev@gmail.com>

--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -41,6 +41,7 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
+    'sp-std/std',
     'common/std',
     'currencies/std',
     'tokens/std',
@@ -48,4 +49,5 @@ std = [
     'dex-manager/std',
     'assets/std',
     'permissions/std',
+    'mock-liquidity-source/std',
 ]
