PSS-10: Farming pallet.
Signed-off-by: Nikita <humb1t@yandex.ru>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "pallets/trading-pair",
     "pallets/dex-manager",
     "pallets/dex-api",
+    "pallets/farming",
     "pallets/liquidity-proxy",
     "pallets/mock-liquidity-source",
     "pallets/template",
