Technical pallet redesign
Reason: too complex usage and structure of the pallet
Solution: implement conversion straight from `T::TechnicalAccountId` to `T::AccountId` and remove unused types

Changes:
- Removed: `TechAccountIdReprCompat`, `TechAmount`, `TechBalance`, `tech_acc_id_from_primitive`
- Added: `tech_account_id_to_account_id`

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -58,6 +58,7 @@ cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-f
 common = { path = "../common", default-features = false }
 assets = { path = "../pallets/assets", default-features = false }
 #iroha-bridge = { path = "../pallets/iroha-bridge", default-features = false }
+static_assertions = "1.1.0"
 
 [build-dependencies]
 substrate-wasm-builder-runner = { version = "1.0.6" }
