[PSS-7] [PSS-8] Introduce pool-xyk pallet
Reason: Pool-xyk pallet is needed and now it is posible to create it with fresh code in develop
Solution: Create pallet, do some modifications and points

1. Create new trait in common to deal with tech account conversions, and in some other pallets
1.a Add mut property into validate, it will be used to set `Option` values
1.b Create derive_fee_account
1.c Create derive_tech_account_from_dex_and_trading_pair
1.d Refactoring technical/src/mock.rs, adding mut into validate
2. Create implementations of SwapAction and fill it with code
2.a Creating validation function
2.b Creating reserve function
2.c Creating other structures like `Poly`
3. Create functions and structure fields what is needed for fee
4. Create get_primitive_from_tech_acc_id, for revese convertation
5. Modification of create_swap, now `DispatchResult` is used in `validate`
6. Some syntactic corrections, like `Dex` to `DEX` and `Recourse` to `Recource`
7. Modification of technical pallet
7.a Just refactor code without change of logic, using `perform_create_swap`
7.c Using `perform_create_swap` from pool-xyk pallet
7.d Adding `DeriveTechAccountFromDEXAndTradingPair` requirement in `TechAccountId`
7.e Adding `DEXIdOf<T>` alias
8. Creating `swap_pair` exitrinsic in pool-xyk pallet
9. Creating tests
9.a Create mock file
9.b Create test file
10. Adding pool-xyk pallet into runtime, creating trait impls and other thing
11. Create JsonCompatAssetId
11.a Create conversion functions
11.b Using this type as AssetId in Runtime
11.c Create util functions for json, like try_from_code
11.d Using it as GetBaseAssetId const code
11.e JsonCompatAssetId exist in technical pallet, because some tests is checking convertation with it
12 Correcting mistakes in other pallets mock.rs, for example TechAssetId must not be equal to AssetId
13. Add some target to Makefile, useful for error finding
14. Create macro_rules! pattern01 in pool-xyk lib.rs, to shorten some code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ members = [
     "pallets/mock-liquidity-source",
     "pallets/template",
     "pallets/technical",
+    "pallets/pool-xyk",
     "pallets/xor-fee",
     "pallets/referral-system",
     "pallets/bonding-curve-pool",
