--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,6 +11,7 @@ codec = { package = "parity-scale-codec", version = "1.3.0", default-features = 
 trading-pair = { path = "../pallets/trading-pair", default-features = false}
 bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false }
 technical = { path = "../pallets/technical", default-features = false}
+pool-xyk = { path = "../pallets/pool-xyk", default-features = false}
 parachain-info = { path = "../pallets/parachain-info", default-features = false}
 permissions = { path = "../pallets/permissions", default-features = false}
 cumulus-token-dealer = { path = "../pallets/token-dealer", default-features = false}
@@ -97,6 +98,7 @@ std = [
 	"trading-pair/std",
 	"bonding-curve-pool/std",
 	"technical/std",
+	"pool-xyk/std",
 	"common/std",
 	"template/std",
 	"dex-manager/std",
