Incentives distribution in Farming pallete.
WEAWG haskell prototype and testing on random data

Formula update

Testing on Bitcoin dayly data

Updating Farming pallet

Using incremental functions for calculations

Using Bitcoin data as demo price source in farming pallet

Implement traits for pool token information from asset, using this traits

More math testing

remove warnings, format code

Add w option to run_script.sh, to disable offchain worker than it is needed

Declaring default farm in genesis config

Adding and removeing comments

Other refactoring

Renaming perform to perform_write_to_database

Using expect

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -35,6 +35,8 @@ assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features 
 liquidity-proxy-runtime-api = { path = "../pallets/liquidity-proxy/runtime-api", default-features = false}
 eth-bridge = { path = "../pallets/eth-bridge", default-features = false }
 multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig", default-features = false }
+farming-runtime-api = { path = "../pallets/farming/runtime-api", default-features = false}
+
 
 liquidity-proxy-benchmarking = { path = "../pallets/liquidity-proxy/benchmarking", default-features = false, optional = true }
 pool-xyk-benchmarking = { path = "../pallets/pool-xyk/benchmarking", default-features = false, optional = true }
