--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -23,7 +23,11 @@ sp-runtime = { version = "2.0.0", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
 pallet-timestamp = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
+pool-xyk = { path = "../pool-xyk", default-features = false }
+dex-manager = { path = "../dex-manager", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
 technical = { path = "../technical", default-features = false }
+orml-traits = { version = "0.3.2", default-features = false }
 
 hex-literal = { version = "0.3.1", optional = true }
 
