--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ members = [
     "pallets/xor-fee",
     "pallets/referral-system",
     "pallets/bonding-curve-pool",
+    "pallets/eth-bridge",
     "node/",
 ]
 
 [profile.release]
 panic = 'unwind'
-
