--- a/pallets/trading-pair/runtime-api/Cargo.toml
+++ b/pallets/trading-pair/runtime-api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dex-runtime-api"
+name = "trading-pair-runtime-api"
 version = "0.1.0"
 edition = "2018"
 
@@ -9,15 +9,13 @@ codec = { package = "parity-scale-codec", version = "1.3.0", default-features = 
 sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-common = { path = "../../../common", default-features = false, branch = "rococo-branch" }
 
 [features]
 default = ["std"]
 std = [
-	"serde",
-	"codec/std",
-	"sp-api/std",
-	"sp-runtime/std",
-	"sp-std/std",
-	"common/std",
+    "serde",
+    "codec/std",
+    "sp-api/std",
+    "sp-runtime/std",
+    "sp-std/std",
 ]
