--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,6 +9,7 @@ serde = { version = "1.0.101", default-features = false, optional = true, featur
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 
 trading-pair = { path = "../pallets/trading-pair", default-features = false}
+trading-pair-runtime-api = { path = "../pallets/trading-pair/runtime-api", default-features = false }
 bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features = false }
 technical = { path = "../pallets/technical", default-features = false}
 pool-xyk = { path = "../pallets/pool-xyk", default-features = false}
@@ -24,6 +25,7 @@ xor-fee = { path = "../pallets/xor-fee", default-features = false }
 mock-liquidity-source = { path = "../pallets/mock-liquidity-source", default-features = false }
 liquidity-proxy = { path = "../pallets/liquidity-proxy", default-features = false }
 template = { package = "pallet-template", path = "../pallets/template", version = "2.0.0-rc5", default-features = false}
+template-runtime-api = { path = "../pallets/template/runtime-api", default-features = false }
 
 currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
 tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
@@ -98,11 +100,13 @@ std = [
 	"cumulus-primitives/std",
 	"cumulus-token-dealer/std",
 	"trading-pair/std",
+	"trading-pair-runtime-api/std",
 	"bonding-curve-pool/std",
 	"technical/std",
 	"pool-xyk/std",
 	"common/std",
 	"template/std",
+	"template-runtime-api/std",
 	"dex-manager/std",
 	"dex-manager-runtime-api/std",
 	"dex-api/std",
