[DOPS-1156] API fix (#37)
* RUST_VERSION & release image update

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* soraneo-deploy repo and stand created

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* release image update

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* release image update

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Apply changes

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Tests

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Tests

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* fix

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Mnemo phrase var implemented

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Mnemo phrase var implemented

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Mnemo fix

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Mnemo fix

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* Mnemo fix

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

--- a/housekeeping/docker/develop/Dockerfile
+++ b/housekeeping/docker/develop/Dockerfile
@@ -5,7 +5,7 @@ ENV RUSTUP_HOME="/opt/rust"
 ENV CARGO_HOME="/opt/rust"
 ENV CARGO_TARGET_DIR="/opt/rust-target"
 ENV PATH="$PATH:$RUSTUP_HOME/bin"
-ENV RUST_VERSION=nightly
+ENV RUST_VERSION=nightly-2020-10-06
 
 # Install dependencies
 RUN apt-get update && \
